# voxtral-tts

./: .gitignore  README.md  RESEARCH_LOG.md  pyproject.toml  run.sh
src/: audio_postprocess.py  benchmark_all.py  generate.py  generate_fast.py  model.py  serve.py  torchao_inference.py
src/voxtral_tts/: __init__.py  benchmark_all.py  generate.py  generate_fast.py  load_model.py  serve.py  torchao_inference.py
