[project]
name = "voxtral-tts"
version = "0.1.0"
description = "Voxtral-4B-TTS local inference with int4 HQQ quantization"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "torch>=2.7",
    "safetensors",
    "soundfile",
    "numpy",
    "tiktoken",
    "scipy",
]

[project.optional-dependencies]
int4 = ["torchao>=0.16", "hqq"]
serve = ["fastapi", "uvicorn", "pydantic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxtral_tts"]
